--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
       <div id="content" class="max-w-screen-lg mx-auto my-0 bg-white lg:p-5">
         <h2 class="header-title">Software and Consulting</h2>
         <img src="assets/img/2.png" class="float-left w-full lg:w-72 mr-8 mb-8" />
-        <p class="text-5xl lg:text-base px-8 lg:px-0">
+        <p class="text-5xl leading-normal lg:text-base px-8 lg:px-0">
           Moin und herzlich willkommen! Ich bin <span class="font-bold">Marvin Kurock</span>, ein leidenschaftlicher
-          IT-Consultant und Programmierer
+          IT-Consultant und Software-Entwickler
           aus der wunderschönen Hansestadt Hamburg. Seit über einem Jahrzehnt bin ich in der faszinierenden Welt der
           Informationstechnologie zuhause, mit einem Fokus auf Softwareentwicklung, Cloud-Infrastruktur und
           -Architektur.
@@ -58,7 +58,7 @@
 
           <br><br>
           Mein Ziel ist es, durch innovative Technologien und fortschrittliche Ansätze Ihre Visionen zu verwirklichen.
-          Als Hamburger bin ich davon überzeugt, dass harte Arbeit, Zuverlässigkeit und eine pragmatische
+          Ich bin davon überzeugt, dass harte Arbeit, Zuverlässigkeit und eine pragmatische
           Herangehensweise die Grundlage für solide und skalierbare Lösungen bilden.
 
           <br><br>
@@ -82,15 +82,18 @@
             style="color: white;" src="assets/img/logos/azure.svg" />
           <img class="w-12 object-contain" alt="AWS - Amazon Web Services" title="AWS - Amazon Web Services"
             style="width: 65px" style="color: white;" src="assets/img/logos/aws.svg" />
+          <img class="w-12 object-contain" alt="Kali Linux - Offensive Security" title="Kali Linux - Offensive Security"
+            style="width: 65px" style="color: white;" src="assets/img/logos/kali.png" />
         </div>
         <h3 class="text-center py-10 text-6xl lg:text-4xl">Webenwicklung</h3>
         <div class="flex flex-col lg:flex-row ">
           <div class="bg-center bg-cover flex-1 lg:grow-0 aspect-square lg:basis-[400px]"
             style="background-image: url('assets/img/web.jpg');"></div>
           <div class="flex-1 px-8 lg:px-4 py-8 lg:py-0">
-            <p class="text-5xl lg:text-base">
-              Als leidenschaftlicher Webentwickler bin ich spezialisiert auf die Realisierung herausragender
-              Webanwendungen mit JavaScript und verschiedenen Frameworks. Meine umfassenden Fähigkeiten erstrecken sich
+            <p class="text-5xl leading-normal lg:text-base">
+              Als langjähriger Webentwickler bin ich spezialisiert auf die Realisierung herausragender
+              Webanwendungen mit JavaScript/Typescript und verschiedenen Frameworks. Meine umfassenden Fähigkeiten
+              erstrecken sich
               über Angular, React, Svelte und Vue – allesamt leistungsstarke Technologien, die ich mit Begeisterung
               einsetze, um ansprechende und effiziente Webseiten zu gestalten.
               <br><br>
@@ -101,8 +104,9 @@
               den
               modernen Standards für Webentwicklung entsprechen.
               <br><br>
-              Profitieren Sie, wie ich durch die geschickte Anwendung von Frameworks und Metaframeworks innovative,
-              skalierbare und benutzerfreundliche Webanwendungen entwickle. Wenn Sie an einer Zusammenarbeit
+              Profitieren Sie durch den geschickten Einsatz von Frameworks und Metaframeworks innovative,
+              skalierbare und benutzerfreundliche Webanwendungen in kürzester Zeit zu entwickeln. Wenn Sie an einer
+              Zusammenarbeit
               interessiert
               sind oder mehr über meine Fähigkeiten erfahren möchten, zögern Sie nicht, mich zu kontaktieren.
             </p>
@@ -114,22 +118,23 @@
           <div class="bg-center bg-cover flex-1 lg:grow-0 aspect-square lg:basis-[400px]"
             style="background-image:url('/assets/img/app.jpg');"></div>
           <div class="flex-1 px-8 lg:px-4 py-8 lg:py-0">
-            <p class="text-5xl lg:text-base">
+            <p class="text-5xl leading-normal lg:text-base">
               Als erfahrener Dienstleister im Bereich Mobile App Development biete ich maßgeschneiderte Lösungen sowohl
               mit React Native als auch durch native iOS Entwicklung mit Swift, SwiftUI, WidgetKit und SiriKit. In der
-              dynamischen Welt der mobilen Technologien ist es meine Leidenschaft, innovative und benutzerfreundliche
+              dynamischen Welt der mobilen Technologien ist es mein Ziel, innovative und benutzerfreundliche
               Anwendungen zu schaffen, die den individuellen Anforderungen meiner Kunden gerecht werden.
               <br><br>
               React Native - Effizient und plattformübergreifend
               Mit React Native erstelle ich plattformübergreifende Apps, die auf iOS und Android gleichermaßen
-              beeindrucken. Die Verwendung von JavaScript ermöglicht nicht nur eine effiziente Entwicklung, sondern
+              beeindrucken. Die Verwendung von JavaScript/Typescript ermöglicht nicht nur eine effiziente Entwicklung,
+              sondern
               bietet
               auch kosteneffektive Lösungen ohne Abstriche bei der Performance. Mein Ziel ist es, Apps zu gestalten, die
               nicht nur technisch brillant sind, sondern auch ein beeindruckendes Nutzererlebnis bieten.
               <br><br>
               Native iOS Entwicklung mit Swift, SwiftUI, WidgetKit und SiriKit
               Für Kunden, die eine erstklassige iOS-Erfahrung suchen, setze ich auf die native iOS Entwicklung mit
-              Swift.
+              SwiftUI.
               Dabei integriere ich fortschrittliche Technologien wie SwiftUI für moderne und deklarative
               Benutzeroberflächen, WidgetKit für dynamische Home-Bildschirm-Widgets und SiriKit für die nahtlose
               Integration von Sprachbefehlen und intelligenten Siri-Funktionen.
@@ -137,35 +142,16 @@
           </div>
         </div>
         <div class="spacer"></div>
-        <h3 class="text-center py-10 text-6xl lg:text-4xl">Cyber Security</h3>
-        <div class="flex flex-col lg:flex-row ">
-          <div class="bg-center bg-cover flex-1 lg:grow-0 aspect-square lg:basis-[400px]"
-            style="background-image:url('/assets/img/security.jpeg');"></div>
-          <div class="flex-1 px-8 lg:px-4 py-8 lg:py-0">
-            <p class="text-5xl lg:text-base">
-              Mit einer tiefen Leidenschaft für Cybersecurity und einer Expertise im Bereich des White-Hat-Hacking
-              verbinde ich mein technisches Know-how mit einem ausgeprägten Auge für Sicherheit. Die Fähigkeit,
-              Schwachstellen zu erkennen und potenzielle Bedrohungen zu analysieren, ermöglicht es mir nicht nur,
-              effektive Gegenmaßnahmen zu ergreifen, sondern trägt auch entscheidend zur Entwicklung sicherer Software
-              bei. Meine Mission ist es, digitale Umgebungen zu stärken und die Vertraulichkeit, Integrität und
-              Verfügbarkeit von Informationen zu gewährleisten.
-              <br><br>
-              Zusätzlich stehe ich auch für Penetrationstests zur Verfügung, um die Sicherheitslandschaft weiter zu
-              stärken. Durch systematische Prüfungen identifiziere ich potenzielle Schwachstellen in Netzwerken,
-              Anwendungen und Systemen. Diese proaktiven Maßnahmen ermöglichen es, Sicherheitslücken frühzeitig zu
-              erkennen und zu beheben, um so die Widerstandsfähigkeit gegenüber potenziellen Angriffen zu maximieren.
-            </p>
-          </div>
-        </div>
-        <div class="spacer"></div>
         <h3 class="text-center py-10 text-6xl lg:text-4xl">Infrastruktur</h3>
-        <div class="flex flex-col lg:flex-row-reverse">
+        <div class="flex flex-col lg:flex-row">
           <div class="bg-center bg-cover flex-1 lg:grow-0 aspect-square lg:basis-[400px]"
             style="background-image: url('/assets/img/cloud.jpeg');"></div>
           <div class="flex-1 px-8 lg:px-4 py-8 lg:py-0">
-            <p class="text-5xl lg:text-base">
-              Meine Expertise erstreckt sich über die gesamte Bandbreite der Cloud-Technologien, wobei ich mich
-              besonders auf Infrastructure as Code (IaC) mit Terraform fokusiert habe. Durch die Automatisierung von
+            <p class="text-5xl leading-normal lg:text-base">
+              Durch meine langjährige Erfahrung erstreckt sich meine Expertise über die gesamte Bandbreite der
+              Cloud-Technologien, wobei ich mich
+              besonders auf Infrastructure as Code (IaC) mit Terraform und Kubernetes fokusiert habe. Durch die
+              Automatisierung von
               Ressourcenbereitstellung und -verwaltung ermöglicht Terraform eine effiziente und skalierbare
               Infrastruktur, die den individuellen Anforderungen jedes Projekts gerecht wird.
               <br><br>
@@ -175,6 +161,22 @@
               <br><br>
               Kontaktieren Sie mich, um mehr darüber zu erfahren, wie ich Ihnen dabei helfen kann, Ihre Cloud-Strategie
               zu optimieren und Ihre digitale Transformation voranzutreiben.
+            </p>
+          </div>
+        </div>
+        <div class="spacer"></div>
+        <h3 class="text-center py-10 text-6xl lg:text-4xl">Cyber Security</h3>
+        <div class="flex flex-col lg:flex-row-reverse">
+          <div class="bg-center bg-cover flex-1 lg:grow-0 aspect-square lg:basis-[400px]"
+            style="background-image:url('/assets/img/security.jpeg');"></div>
+          <div class="flex-1 px-8 lg:px-4 py-8 lg:py-0">
+            <p class="text-5xl leading-normal lg:text-base">
+              Durch mein starkes Interesse für Cybersecurity und einer Expertise im Bereich des White-Hat-Hacking
+              verbinde ich mein technisches Know-how mit einem ausgeprägten Auge für Sicherheit. Die Fähigkeit,
+              Schwachstellen zu erkennen und potenzielle Bedrohungen zu analysieren, ermöglicht es mir nicht nur,
+              effektive Gegenmaßnahmen zu ergreifen, sondern trägt auch entscheidend zur Entwicklung sicherer Software
+              bei. Meine Mission ist es, digitale Umgebungen zu stärken und die Vertraulichkeit, Integrität und
+              Verfügbarkeit von Informationen zu gewährleisten.
             </p>
           </div>
         </div>
