--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Kurock.io - Software and Consulting</title>
+  <link rel="icon" type="image/x-icon" href="/assets/fav.ico">
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
 
@@ -20,11 +21,13 @@
     <a id="main"></a>
     <header>
       <div class="title-text">
-        <h1>Kurock</h1>
-        <h2>Software and Consulting</h2>
-        <h4>aus Hamburg</h4>
+        <h1 class="text-[9rem] lg:text-[15rem]">Kurock</h1>
+        <h2 class="text-[2rem] lg:text-[3rem] px-4 text-white bg-black text-right -mt-8 lg:-mt-16">Software und
+          Consulting</h2>
+        <h4 class="float-right text-[1.5rem] lg:text-[2rem] px-4 text-white bg-black text-right">aus Hamburg</h4>
       </div>
-      <img src="assets/img/sil.png" class="bg-image-front -bottom-60 lg:-bottom-32" />
+      <img src="assets/img/hamburg.png"
+        class="bg-image-front bottom-56 lg:bottom-16 mix-blend-overlay h-3/4 lg:h-auto w-auto lg:w-2/3" />
       <div class="blur"></div>
       <!-- <img src="assets/img/bg.jpg" class="bg-image bg-image-behind"> -->
       <div id="particles"></div>
@@ -88,7 +91,7 @@
         <h3 class="text-center py-10 text-6xl lg:text-4xl">Webenwicklung</h3>
         <div class="flex flex-col lg:flex-row ">
           <div class="bg-center bg-cover flex-1 lg:grow-0 aspect-square lg:basis-[400px]"
-            style="background-image: url('assets/img/web.jpg');"></div>
+            style="background-image: url('assets/img/web.png');"></div>
           <div class="flex-1 px-8 lg:px-4 py-8 lg:py-0">
             <p class="text-5xl leading-normal lg:text-base">
               Als langjähriger Webentwickler bin ich spezialisiert auf die Realisierung herausragender
@@ -116,7 +119,7 @@
         <h3 class="text-center py-10 text-6xl lg:text-4xl">Mobile Entwicklung</h3>
         <div class="flex flex-col lg:flex-row-reverse ">
           <div class="bg-center bg-cover flex-1 lg:grow-0 aspect-square lg:basis-[400px]"
-            style="background-image:url('/assets/img/app.jpg');"></div>
+            style="background-image:url('/assets/img/appdev.png');"></div>
           <div class="flex-1 px-8 lg:px-4 py-8 lg:py-0">
             <p class="text-5xl leading-normal lg:text-base">
               Als erfahrener Dienstleister im Bereich Mobile App Development biete ich maßgeschneiderte Lösungen sowohl
@@ -145,7 +148,7 @@
         <h3 class="text-center py-10 text-6xl lg:text-4xl">Infrastruktur</h3>
         <div class="flex flex-col lg:flex-row">
           <div class="bg-center bg-cover flex-1 lg:grow-0 aspect-square lg:basis-[400px]"
-            style="background-image: url('/assets/img/cloud.jpeg');"></div>
+            style="background-image: url('/assets/img/cloud.png');"></div>
           <div class="flex-1 px-8 lg:px-4 py-8 lg:py-0">
             <p class="text-5xl leading-normal lg:text-base">
               Durch meine langjährige Erfahrung erstreckt sich meine Expertise über die gesamte Bandbreite der
@@ -168,7 +171,7 @@
         <h3 class="text-center py-10 text-6xl lg:text-4xl">Cyber Security</h3>
         <div class="flex flex-col lg:flex-row-reverse">
           <div class="bg-center bg-cover flex-1 lg:grow-0 aspect-square lg:basis-[400px]"
-            style="background-image:url('/assets/img/security.jpeg');"></div>
+            style="background-image:url('/assets/img/cybersec.png');"></div>
           <div class="flex-1 px-8 lg:px-4 py-8 lg:py-0">
             <p class="text-5xl leading-normal lg:text-base">
               Durch mein starkes Interesse für Cybersecurity und einer Expertise im Bereich des White-Hat-Hacking
