--- a/index.html
+++ b/index.html
@@ -174,12 +174,12 @@
             style="background-image:url('/assets/img/cybersec.png');"></div>
           <div class="flex-1 px-8 lg:px-4 py-8 lg:py-0">
             <p class="text-5xl leading-normal lg:text-base">
-              Durch mein starkes Interesse für Cybersecurity und einer Expertise im Bereich des White-Hat-Hacking
-              verbinde ich mein technisches Know-how mit einem ausgeprägten Auge für Sicherheit. Die Fähigkeit,
-              Schwachstellen zu erkennen und potenzielle Bedrohungen zu analysieren, ermöglicht es mir nicht nur,
-              effektive Gegenmaßnahmen zu ergreifen, sondern trägt auch entscheidend zur Entwicklung sicherer Software
-              bei. Meine Mission ist es, digitale Umgebungen zu stärken und die Vertraulichkeit, Integrität und
-              Verfügbarkeit von Informationen zu gewährleisten.
+              Mit einem großen Interesse an Cybersecurity setze ich mich als Hobby-Hacker intensiv mit den
+              Vorgehensweisen von Hackern auseinander. Diese Erfahrungen fließen nahtlos in meine Arbeit als
+              Software- und Cloud-Engineer ein. Durch die Anwendung dieses Wissens kann ich sicherstellen, dass meine
+              Arbeit nicht nur leistungsstark, sondern auch sicher ist. Die gewonnenen Erkenntnisse über
+              potenzielle Schwachstellen ermöglichen es mir, proaktiv Sicherheitsmaßnahmen zu implementieren und eine
+              robuste Softwareentwicklung zu gewährleisten.
             </p>
           </div>
         </div>
