--- a/impressum.html
+++ b/impressum.html
@@ -3,11 +3,36 @@
 
 <head>
   <title>Kurock.io - Software and Consulting</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <link rel="stylesheet" href="assets/styles.css" />
+  <style>
+    h1 {
+      padding: 1rem 0;
+      font-weight: bold;
+    }
+
+    h2 {
+      font-weight: bold;
+      padding: 1rem 0;
+      font-size: 1rem;
+    }
+
+    h3 {
+      font-weight: bold;
+      padding: 1rem 0;
+      font-size: 1rem;
+    }
+
+    h4 {
+      font-weight: bold;
+      padding: 1rem 0;
+      font-size: 1rem;
+    }
+  </style>
 </head>
 
 <body>
-  <nav class="fixed left-0 right-0 top-0 text-center z-10 pt-12 lg:pt-[10px] text-3xl lg:text-base inverted">
+  <nav class="fixed left-0 right-0 top-0 text-center z-10 pt-8 lg:pt-[10px] inverted text-xs lg:text-base">
     <ul>
       <li><a href="/#">Home</a></li>
       <li><a href="/#about">About</a></li>
@@ -19,11 +44,11 @@
   <div class="wrapper" id="wrapper">
     <a id="main"></a>
     <main>
-      <div id="nav-bg" class="sticky z-50 top-0 left-0 h-32 opacity-100 bg-white shadow-lg lg:h-12">
+      <div id="nav-bg" class="sticky z-50 top-0 left-0 h-20 opacity-100 bg-white shadow-lg lg:h-12">
         <div class="nav-bg-inner"></div>
       </div>
       <a id="about"></a>
-      <div id="content" class="text-5xl lg:text-base max-w-screen-lg mx-auto my-0 bg-white lg:p-5">
+      <div id="content" class="text-lg p-4 lg:text-base max-w-screen-lg mx-auto my-0 bg-white lg:p-5">
         <h2 class="header-title">Impressum</h2>
         <div style="text-align: center; padding-bottom: 25px;">
           <h2>Angaben gem&auml;&szlig; &sect; 5 TMG</h2>
@@ -33,8 +58,11 @@
             21029 Hamburg</p>
 
           <h2>Kontakt</h2>
-          <p>Telefon: &#91;Telefonnummer&#93;<br />
-            E-Mail: marvin(at)kurock.io</p>
+          <p>
+            E-Mail: marvin(at)kurock.io
+            <br />
+            Umsatzsteuer-IdNr: DE365231008
+          </p>
 
           <h2>EU-Streitschlichtung</h2>
           <p>Die Europ&auml;ische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit: <a
@@ -48,8 +76,8 @@
 
           <p>Quelle: <a href="https://www.e-recht24.de">e-recht24.de</a></p>
         </div>
-        <div>
-          <h1>Datenschutz&shy;erkl&auml;rung</h1>
+        <div class="p-4">
+          <h1 class="text-xl lg:text-2xl">Datenschutz&shy;erkl&auml;rung</h1>
           <h2>1. Datenschutz auf einen Blick</h2>
           <h3>Allgemeine Hinweise</h3>
           <p>Die folgenden Hinweise geben einen einfachen &Uuml;berblick dar&uuml;ber, was mit Ihren personenbezogenen
