--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <a id="about"></a>
       <div id="content" class="max-w-screen-lg mx-auto my-0 bg-white lg:p-5">
         <h2 class="header-title">Software and Consulting</h2>
-        <img src="assets/img/2.png" class="float-left w-full lg:w-72 mr-8 mb-8" />
+        <img src="assets/img/3.jpg" class="float-left w-full lg:w-72 mr-8 mb-8" />
         <p class="text-lg leading-normal lg:text-base px-8 lg:px-0">
           Moin und herzlich willkommen! Ich bin <span class="font-bold">Marvin Kurock</span>, ein leidenschaftlicher
           IT-Consultant und Software-Entwickler
